--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: nodeHarvest
 Type: Package
-Title: Compute and visualize the Node Harvest estimator
-Version: 0.1
-Date: 2009-10-07
+Title: Node Harvest for regression and classification
+Version: 0.2
+Date: 2009-10-30
 Author: Nicolai Meinshausen
 Maintainer: Nicolai Meinshausen <meinshausen@stats.ox.ac.uk>
 Depends: quadprog,randomForest,mlbench
@@ -19,6 +19,6 @@ Description: Node harvest is a simple interpretable tree-like estimator
         explanation of the prediction.
 License: GPL-3
 URL: http://www.stats.ox.ac.uk/~meinshau
-Packaged: 2009-10-12 12:31:35 UTC; meinsn
+Packaged: 2009-10-30 18:53:13 UTC; meinsn
 Repository: CRAN
-Date/Publication: 2009-10-12 13:30:58
+Date/Publication: 2009-11-01 16:17:23
