--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,7 @@
 import(graphics)
+importFrom(quadprog,solve.QP)
+importFrom(randomForest,randomForest,getTree,rfImpute)
+
 export(nodeHarvest)
 S3method(predict,nodeHarvest)
 S3method(plot,nodeHarvest)
